Fix placement of left sidebar resizer conflicting with scrollbar (#247)
* Fix folder context menu getting clipped

* Fix placement of left sidebar resizer conflicting with scrollbar

* Fix Selenium test; put left sidebar resizer between scrollbar & Assets

--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -3,7 +3,7 @@
 .Folders {
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
-  overflow: hidden;
+  // overflow: hidden; // commented out because the folder context menu needs to show
   margin-bottom: 9px;
 }
 
